# expert-kit

./: .dockerignore  .draft.py  .gitignore  .lfsconfig  .python-version  Cargo.toml  README.md  buf.yaml  pyproject.toml
container/: Dockerfile.arm  Dockerfile.cpu
dev/: apm.docker-compose.yaml  clickhouse.dockerfile  docker-compose-build.yaml  docker-compose-single_node.yaml  docker-compose.yaml  dsv3-test.config.yaml  dsv3-test.inventory.yaml  hello-world.config.yaml  hello-world.worker-2.config.yaml  local.inventory.yaml  meta-db.docker-compose.yaml
dev/clickhouse/: config.xml
dev/config/: config-ds_tiny.yaml  config-qwen3.yaml  config.yaml
dev/grafana/: panel.json
dev/local-example/: README.md  compose.build.yaml  compose.override.yaml  compose.yaml  config.yaml
dev/prometheus/: prometheus.yml
dev/vector/: vector.yml
doc/tutorial/: deepseek-tiny.md  deepseek-v3.md
doc/tutorial/standalone/: deepseek-tiny.md  deepseek-v3.md  qwen3-moe-a3b-demo.md
docker/: Dockerfile.cpu
ek-base/: Cargo.toml
ek-base/src/: config.rs  error.rs  lib.rs  utils.rs
ek-benchmark/: Cargo.toml
ek-benchmark/scripts/: .gitignore
ek-benchmark/src/: bench.rs  expert.rs  expert_ort.rs  expert_torch.rs  lib.rs  main.rs
ek-cli/: Cargo.toml
ek-cli/src/: db.rs  doctor.rs  main.rs  model.rs  onnx.rs  pretrain.rs
ek-cli/src/schedule/: mod.rs
ek-computation/: Cargo.toml  build.rs  diesel.toml
ek-computation/examples/: simple_client.rs
ek-computation/migrations/2025-04-12-094134_init/: down.sql  up.sql
ek-computation/migrations/2025-05-10-114512_expand_node_state/: up.sql
ek-computation/resources/: qwen3-l0e1.result.safetensors  qwen3-l0e1.weight.safetensors  w8a16active-l0q_a_proj.safetensors
ek-computation/src/: lib.rs  main.rs  metrics.rs  schema.rs  tch_safetensors.rs  x.rs
ek-computation/src/backend/: mod.rs
ek-computation/src/backend/ort/: mod.rs
ek-computation/src/backend/torch/: mod.rs  tch_safetensors.rs
ek-computation/src/controller/: dispatcher.rs  executor.rs  metrics.rs  mod.rs  poller.rs  registry.rs  trace.rs
ek-computation/src/controller/service/: compute.rs  control.rs  mod.rs  state.rs
ek-computation/src/ffn/: expert_cann.rs  expert_ort.rs  expert_torch.rs  meta.rs  mod.rs
ek-computation/src/gate/: mod.rs  x.rs
ek-computation/src/onnx/: exporter.rs  mod.rs
ek-computation/src/proto/: mod.rs
ek-computation/src/state/: io.rs  mod.rs  models.rs  pool.rs  writer.rs
ek-computation/src/weight/: mod.rs
ek-computation/src/worker/: core.rs  manager.rs  mod.rs  server.rs  state.rs  x.rs
ek-computation/src/worker/gate/: mod.rs
ek-db/: Cargo.toml
ek-db/resources/ds-tiny/: .gitattributes  config.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors  model.safetensors.index.json  tokenizer.json  tokenizer_config.json
ek-db/src/: dal.rs  lib.rs
ek-db/src/safetensor/: memcache.rs  mod.rs  transformer.rs
ek-db/src/weight_srv/: client.rs  manager.rs  mod.rs  server.rs
ek-edb/: Cargo.toml
ek-integration/expertkit_torch/: README.md  buf.gen.yaml  buf.yaml  gen_proto_py.sh  setup.py
ek-integration/expertkit_torch/examples/: local_test.txt  local_test_mini.txt  run_local.sh  save_mini_model.sh
ek-integration/expertkit_torch/expertkit_torch/: grpc_client.py  main.py  model.py  requirements.txt
ek-integration/expertkit_torch/expertkit_torch/configs/: confi_raw.json  config_1.5B.json  config_3B.json  config_mini.json  config_test_mini.json
ek-integration/expertkit_torch/expertkit_torch/models/: qwen3_moe.py
ek-integration/expertkit_torch/expertkit_torch/models/deepseek_v3/: ds_tiny.py  dummy_kernel.py  kernel.py  model.py
ek-integration/expertkit_torch/expertkit_torch/pbpy/ek/control/v1/: control_pb2.py  control_pb2_grpc.py
ek-integration/expertkit_torch/expertkit_torch/pbpy/ek/object/v1/: object_pb2.py  object_pb2.pyi  object_pb2_grpc.py
ek-integration/expertkit_torch/expertkit_torch/pbpy/ek/worker/v1/: expert_pb2.py  expert_pb2.pyi  expert_pb2_grpc.py
ek-integration/expertkit_torch/expertkit_torch/utils/: profiler_manager.py
ek-integration/expertkit_torch/inference/: main.py
ek-integration/expertkit_torch/inference/configs/: config_test_mini.json
ek-integration/expertkit_torch/tests/: test_correct.py  test_torch.py
ek-integration/expertkit_vllm/: README.md  buf.gen.yaml  gen_proto_py.sh  setup.py
ek-integration/expertkit_vllm/benchmark/: benchmark.py
ek-integration/expertkit_vllm/examples/mock_expert_server/: config.json  mock_server.py  run_client.sh  run_server.sh  run_server_compute.sh  run_server_zero.sh  test_client.py
ek-integration/expertkit_vllm/expertkit_vllm/: expertkit_moe.py  grpc_client.py  plugin.py
ek-integration/expertkit_vllm/expertkit_vllm/experts/: grpc_expert.py
ek-integration/expertkit_vllm/expertkit_vllm/models/: deepseek_v2.py
ek-integration/expertkit_vllm/expertkit_vllm/pbpy/: expert_pb2.py  expert_pb2.pyi  expert_pb2_grpc.py
ek-integration/expertkit_vllm/expertkit_vllm/pbpy/ek/control/v1/: control_pb2.py  control_pb2.pyi  control_pb2_grpc.py
ek-integration/expertkit_vllm/expertkit_vllm/pbpy/ek/worker/v1/: expert_pb2.py  expert_pb2_grpc.py
ek-integration/expertkit_vllm/tests/: test_expertkit_moe.py  test_integration.py  test_model_config.json  test_vllm.py
ek-proto/: expert.proto
ek-proto/ek/control/v1/: control.proto
ek-proto/ek/object/v1/: object.proto
ek-proto/ek/worker/v1/: expert.proto
ek-proto/onnx/: onnx.proto
ek-solution/ansible/: index.yaml  install-torch.yaml
ek-solution/ansible/roles/ek_worker/defaults/: main.yml
ek-solution/ansible/roles/ek_worker/tasks/: main.yml
ek-solution/ansible/roles/torch/defaults/: main.yml
ek-solution/ansible/roles/torch/tasks/: main.yml
py/: create_model.py  expertSplit.py  expert_split.py  expert_tracker.py  schedule_static.py  to_onnx.py
py/splitter/: dal.py  plan.py  planner.py  tracker.py
py/utils/: base.py  dao.py  storage.py
scripts/: expertSplit.py
