
[workspace.dependencies]
tch = "0.19.0"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
polars = { version = "0.46.0", features = [
    "simd",
    "sql",
    "ndarray",
    "lazy",
    "serde",
    "json",
    "parquet",
] }

log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
polars-io = "0.46.0"
pretty_env_logger = "0.5.0"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "*"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
opendal = "0.52.0"

[workspace]
resolver = "2"
members = ["ek-base", "ek-benchmark", "ek-computation"]
