
[workspace.dependencies]
tch = "0.19.0"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ort = { version = "2.0.0-rc.9", features = ["ndarray", "load-dynamic"] }
polars = { version = "0.46.0", features = [
    "simd",
    "sql",
    "ndarray",
    "lazy",
    "serde",
    "json",
    "parquet",
] }

log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
polars-io = "0.46.0"
pretty_env_logger = "0.5.0"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "*"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
opendal = { version = "0.52.0", features = ["services-s3", "services-fs"] }
safetensors = "0.5.3"
bytes = "1.10.1"
async-trait = "0.1.88"
sysinfo = "0.33.1"

diesel = { version = "2.2.9", features = [
    "postgres",
    "serde_json",
    "r2d2",
    "uuid",
    "chrono",
] }

serde_json = "1.0.140"
tokio-stream = "0.1.17"
async-channel = "2.3.1"
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
once_cell = "1.21.3"
config = "0.15.11"
[workspace]
resolver = "2"
members = ["ek-base", "ek-benchmark", "ek-computation", "ek-db"]
