
[workspace.dependencies]
tch = "0.20.0"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
ort = { version = "2.0.0-rc.9", features = [
    "ndarray",
    "load-dynamic",
    "copy-dylibs",
    "half",
] }
polars = { version = "0.46.0", features = [
    "simd",
    "sql",
    "ndarray",
    "lazy",
    "serde",
    "json",
    "parquet",
] }

log = "0.4.26"
clap = { version = "4.5.31", features = ["derive"] }
polars-io = "0.46.0"
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tonic-build = "*"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
opendal = { version = "0.52.0", features = ["services-s3", "services-fs"] }
safetensors = "0.5.3"
bytes = "1.10.1"
async-trait = "0.1.88"
sysinfo = "0.33.1"
serde_derive = "1.0.219"
diesel = { version = "2.2.9", features = [
    "postgres",
    "serde_json",
    "r2d2",
    "uuid",
    "chrono",
] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }

serde_json = "1.0.140"
async-channel = "2.3.1"
once_cell = "1.21.3"
config = "0.15.11"
memmap2 = "0.9.5"
actix-web = "4.10.2"
actix-http = "3.10.0"
reqwest = "0.12.15"
half = { version = "2.6.0", features = ["rand_distr", "num-traits"] }
rand = "0.9.1"
rand_distr = "0.5.1"
fastrace = "0.7"
prometheus = "0.14.0"
lazy_static = "1.5.0"



[workspace]
resolver = "2"
members = ["ek-base", "ek-benchmark", "ek-cli", "ek-computation", "ek-db"]
