[project]
name = "expert-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "matplotlib>=3.10.1",
    "onnx>=1.17.0",
    "onnxscript>=0.2.2",
    "opendal>=0.45.16",
    "polar>=0.0.127",
    "ruff>=0.9.10",
    "safetensors>=0.5.3",
    "torch>=2.6.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]


