[package]
name = "ek_base"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
opendal = { workspace = true }
safetensors = { workspace = true }
tch = { workspace = true }
tonic = { workspace = true }
diesel = { workspace = true }
serde_json = { workspace = true }
diesel-async = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
