[package]
name = "ek-cli"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = { workspace = true }
ek_db = { path = "../ek-db" }
ek_computation = { path = "../ek-computation" }
ek_base= { path = "../ek-base" }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = "2.2.0"

serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
indicatif = "0.17.11"
