[package]
name = "ek_computation"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }
tch = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ort = { workspace = true }
polars = { workspace = true }
polars-io = { workspace = true }
clap = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
safetensors.workspace = true
async-trait = { workspace = true }
opendal = { workspace = true }
sysinfo = { workspace = true }
bytes = { workspace = true }
ek_base = { path = "../ek-base" }
ek_db = { path = "../ek-db" }
env_logger = "0.11.8"
rand = "0.9.0"
diesel = { version = "2.2.9", features = [
    "postgres",
    "serde_json",
    "r2d2",
    "uuid",
    "chrono",
] }
serde_json = "1.0.140"
tokio-stream = "0.1.17"


[build-dependencies]
tonic-build = "*"

[[example]]
name = "simple_client"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
