[package]
name = "ek_db"
version = "0.1.0"
edition = "2024"

[dependencies]

opendal = { workspace = true }
safetensors = { workspace = true }
tch = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
ek_base = { path = "../ek-base" }
once_cell = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
memmap2 = {workspace=true}
moka = { version = "0.12.10", features = ["future"] }
